--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
 .container
   .board-header
     .board-header__menu
-      -if current_user == @user
+      -if my_page?
         .menu-button
           = link_to "", edit_user_path, class: "menu-link"
           = fa_icon("cog", class: "fa-lg menu-icon")
@@ -17,11 +17,11 @@
       .board-header__info--right
         = image_tag @user.avatar.thumb, class: "avatar--large"
   .show-trigger
-    .show-trigger__option.select#boardsOn ボード
-    .show-trigger__option#pinsOn ピン
+    .show-trigger__option.select{data: {target: "#boards"}} ボード
+    .show-trigger__option{data: {target: "#pins"}} ピン
   = render partial: "/shared/boards"
   = render partial: "/shared/pins", locals: {display: "hidden"}
   - if user_signed_in?
     = render partial: "/shared/post"
-    - if current_user == @user
+    - if my_page?
       = render partial: "/shared/modal-boardNew"
