Place save button on each pin

--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -113,6 +113,12 @@ a {
             right: 25px;
             z-index: 3;
           }
+          .saveTrigger {
+            position: absolute;
+            top: 20px;
+            right: 25px;
+            z-index: 3;
+          }
         }
         .item-info {
           margin: 0 8px 6px;
