--- a/app/views/shared/_message.html.haml
+++ b/app/views/shared/_message.html.haml
@@ -8,4 +8,6 @@
           = fa_icon("times", class: "fa-lg")
       .modal__window__container.align-center
         .content2.message
+          %img.preview{ src: "" }
+          %span.message-text
       .modal__window__footer
