--- a/app/views/shared/_pins.html.haml
+++ b/app/views/shared/_pins.html.haml
@@ -14,6 +14,8 @@
           .item-object
             = link_to "", pin_path(board_pin.pin), class: "item-link zoom-in"
             = image_tag board_pin.pin.image.thumb, class: "item-object__img pin-img"
+            - if user_signed_in?
+              .button.modal-open.saveTrigger.button--red.hidden{ data: { target: "modal-pinsToBoard", id: board_pin.id, image: board_pin.pin.image.thumb } } 保存
             - if is_mine?(@board)
               = link_to "解除", board_pin_path(board_pin), method: :delete , class: "button--gray releaseTrigger hidden"
           .item-info
@@ -40,6 +42,8 @@
           .item-object
             = link_to "", pin_path(pin), class: "item-link zoom-in"
             = image_tag pin.image.thumb, class: "item-object__img pin-img"
+            - if user_signed_in?
+              .button.modal-open.saveTrigger.button--red.hidden{ data: { target: "modal-pinsToBoard", id: pin.id, image: pin.image.thumb } } 保存
           .item-info
             .item-info--left
               .item-title #{pin.title}
@@ -60,3 +64,5 @@
   = paginate @pins
   .page-load-status
     .infinite-scroll-request.spinner
+- if user_signed_in?
+  = render partial: "shared/modal-pinsToBoard"
