Add message modal view

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,5 @@
     = favicon_link_tag
   %body
     = yield
-    = render partial: "/shared/message"
+    = render partial: "/shared/modal-saveSuccess"
+    = render partial: "/shared/modal-message"
