Configure messages for pin

--- a/app/views/shared/_modal-pinEdit.html.haml
+++ b/app/views/shared/_modal-pinEdit.html.haml
@@ -17,6 +17,6 @@
             = f.label :description, "ピンの説明", class: "field-label"
             = f.text_area :description, class: "field-input"
         .modal__window__footer
-          .button--gray.left 削除
+          / .button--gray.left 削除
           .footer-center
           = f.submit "保存", class: "button--red right"
