--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,7 +8,7 @@
       %h1.greeting Pincredible にようこそ！
     .form-area
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
+        - devise_error_messages!
         = f.text_field :nickname, autofocus: true, placeholder: "ニックネーム", class: "field-input"
         = f.email_field :email, placeholder: "メール", class: "field-input"
         = f.password_field :password, autocomplete: "off", placeholder: "パスワードを作成", class: "field-input"
