--- a/app/assets/stylesheets/modules/_pin.scss
+++ b/app/assets/stylesheets/modules/_pin.scss
@@ -109,6 +109,10 @@
       padding: 8px 0 15px;
       &__text {
         font-size: 14px;
+        .tag-link {
+          font-weight: bold;
+          color: $font-color-middle;
+        }
       }
     }
     &__board {
