--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -211,6 +211,7 @@ a {
       border-radius: 50%;
       background-color: white;
       text-align: center;
+      margin-top: 10px;
       box-shadow: 0 2px 0 0.5px #EFEFEF;
       cursor: pointer;
       font-size: 24px;
