--- a/app/assets/stylesheets/modules/_modal.scss
+++ b/app/assets/stylesheets/modules/_modal.scss
@@ -75,6 +75,15 @@
         line-height: 60px;
         margin-top: 20px;
       }
+      .help-header {
+        font-size: 20px;
+        line-height: 30px;
+        margin-top: 7px;
+      }
+      .help-text {
+        margin-top: 5px;
+        font-size: 14px;
+      }
       .content {
         padding: 15px 25px;
         border-bottom: 1px solid $mono-color-light;
