--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -216,6 +216,9 @@ a {
       cursor: pointer;
       font-size: 24px;
       line-height: 40px;
+      &:hover {
+        background-color: $mono-color-light;
+      }
     }
   }
   .user-form {
