--- a/app/views/shared/_post.html.haml
+++ b/app/views/shared/_post.html.haml
@@ -51,7 +51,7 @@
       .modal__window__container
         .content
           %span.help-header >>このサイトについて
-          %p.help-text このサイトはプログラミング学習用に作成したもので、サービスとして提供するものではありません。表示されているコンテンツは、他のサイトからスクレイピングしたもの、ダミーデータ生成ライブラリによるもの、訪問した人が投稿したものが含まれます。
+          %p.help-text このサイトはプログラミング学習用にPinterestを目コピしたもので、サービスとして提供するものではありません。表示されているコンテンツは、他のサイトからスクレイピングしたもの、ダミーデータ生成ライブラリによるもの、訪問した人が投稿したものが含まれます。
           %span.help-header >>機能
           %p.help-text ○ユーザー機能：ユーザーアカウントの登録、ログインが可能です。アカウント登録せずにゲストアカウントで試用することができます。ログインすると、以下のピン機能、ボード機能が使えます。
           %p.help-text ○ピン機能：ローカルの画像を投稿することができます。作成したピンを削除することはできません。
